# EdgeGateway

./: .gitignore  LICENSE  README.md
docs/architecture/: communication-and-dataflow.md  didcomm-architecture.md  system-architecture.md
docs/paper/: edgegateway-paper-summary.md
docs/research/: blockchain-personal-ai-summary.md
docs/roadmaps/: milestone-plan.md
scripts/: setup-env.sh
services/didcomm-agent/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/didcomm-agent/data/: didcomm.sqlite
services/didcomm-agent/examples/: demo_exchange.py  smoke_api.py
services/didcomm-agent/src/didcomm_agent/: __init__.py  api.py  crypto.py  exceptions.py  message.py  service.py  storage.py
services/didcomm-agent/src/didcomm_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/didcomm-agent/tests/: conftest.py  test_api.py  test_didcomm_agent.py
yocto/: README.md
yocto/layers/meta-edgegateway/conf/: layer.conf
yocto/layers/meta-edgegateway/recipes-containers/: edgegateway-containers.bb
yocto/layers/meta-edgegateway/recipes-containers/didcomm-agent-compose/: didcomm-agent-compose.bb  didcomm-agent.service
yocto/layers/meta-edgegateway/recipes-containers/didcomm-agent-compose/didcomm-agent/: docker-compose.yml
yocto/layers/meta-edgegateway/recipes-core/images/: edgegateway-image.bb
