[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "didcomm-agent"
version = "0.1.0"
description = "Edge Gateway DIDComm agent prototype"
readme = "README.md"
authors = [
  { name = "EdgeGateway Team" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42,<43"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
api = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
where = ["src"]
